# fsiforum-scraper

./: .flake8  .gitignore  README.md  fsi-scraper.py  setup.cfg
fsiforum/: __init__.py  main.py
scraper/: main.py
