[metadata]
name = fsiforum-scraper
version = 1.0.8

url = https://github.com/ArcasCZ/fsiforum-scraper
description = FSI Forum scraper

classifiers =
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir =
	=.
packages = find:
python_requires = >=3.8

install_requires =
    bs4
    requests

[options.entry_points]
console_scripts =
	fsiforum = fsiforum:main